Fix dark mode neumorphism

--- a/src/layout/Menubar/User/User.scss
+++ b/src/layout/Menubar/User/User.scss
@@ -17,6 +17,6 @@
 .dark-mode {
   .rc-menubar-user {
     background: #595959;
-    box-shadow:  20px 20px 60px #4c4c4c, -20px -20px 60px #666666;
+    box-shadow:  8px 8px 16px #4c4c4c, -8px -8px 16px #666666;
   }
 }
